--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@ body{
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr;
-    grid-template-areas: "a b";
+    grid-template-areas: 'a b';
 }
 .main{
-        grid-area: a;
+    grid-area: a;
     background: tomato;
     display: flex;
     justify-content: center;
