--- a/blog/style.css
+++ b/blog/style.css
@@ -1,23 +1,41 @@
 .container{
     height: 100vh;
     width: 100vw;
-
+    display: grid;
+    grid-template-rows: 1fr 4fr;
+    grid-template-areas: "a"
+    "b";
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+}
+.top{
+    grid-area: a;
+    background: tan;
+}
+.main{
+    grid-area: b;
+    background: thistle;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 }
 .card{
     background: aqua;
-    height: auto;
-    padding: 4px;
-    width: 200px;
+    height: 400px;
+    width: 500px;
     margin: 3px;
     border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-shrink: 0;
 }
 .header{
-    width: 208px;
-    height: 100px;
+    width: 500px;
+    height: auto;
     background: green;
-    position: relative;
-    left: -4px;
-    top: -4px;
     border-radius: 10px 10px 0 0;
     text-align: center;
     display: flex;
@@ -25,10 +43,35 @@
     justify-content: space-between;
 
 }
+.header:hover{
+    background: rgb(2, 199, 28);
+    transition: 0.5s;
+}
 
 .formu{
     display: flex;
     justify-content: flex-end;
+}
+.prawo{
+    height: 50px;
+    width: 200px;
+    background: red;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+}
+.obrazek{
+    display: none;
+    position: relative;
+    left: 400px;
+    border-radius: 30px;
+}
+
+.prawo:hover + .obrazek{
+    display: block;
+    background: gold;
+
 }
 input{
     background: transparent;
@@ -36,4 +79,11 @@ input{
     margin: 3px;
     color: red;
     text-decoration: underline;
+}
+a{
+    text-decoration: none;
+    color: white;
+    background: black;
+    padding: 4px;
+    border-radius: 8px;
 }
